# oxcache

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  USER_GUIDE.md  deny.toml  docker-compose.yml
.github/workflows/: release.yml  security.yml
benches/: cache_benchmark.rs  l2_cache_benchmark.rs  optimization_benchmark.rs
examples/: comprehensive_stress_test.rs  comprehensive_usage.rs  database_partitioning.rs  redis_mode_validator.rs  security_acceptance_test.rs  stress_test.rs  uat_stress_test.rs
examples/common/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: cache_type_test.rs
scripts/: memory_leak_test.sh  real_redis_test.sh  run_all_tests.sh  security_audit.sh  valgrind_memory_test.sh
src/: bloom_filter.rs  config.rs  debug_test.rs  error.rs  lib.rs  main.rs  manager.rs  metrics.rs  rate_limiting.rs  telemetry.rs
src/backend/: l1.rs  l2.rs  mod.rs  redis_provider.rs
src/cli/: admin.rs  clean.rs  metrics.rs  mod.rs  status.rs  warmup.rs
src/client/: db_loader.rs  l1.rs  l2.rs  mod.rs  two_level.rs
src/database/: common.rs  connection_string.rs  mod.rs  mysql.rs  partition.rs  postgresql.rs  sqlite.rs
src/database/partition/: mod.rs
src/recovery/: health.rs  mod.rs  wal.rs
src/serialization/: bincode.rs  json.rs  mod.rs
src/sync/: batch_writer.rs  common.rs  invalidation.rs  mod.rs  optimized_batch_writer.rs  promotion.rs  warmup.rs
src/utils/: mod.rs  redaction.rs
tests/: config_test.rs  cross_database_integration_tests.rs  database_partitioning_tests.rs  database_test_utils.rs  debug_mysql_test.rs  l2_backend_test.rs  layer_test.rs  memory_leak_test.rs  memory_tests.rs  miri_memory_test.rs  mock_l2_backend.rs  mock_l2_backend_test.rs  mock_redis_provider.rs  redis_test_utils.rs  redis_version_compatibility_test.rs  run_integration_tests.sh  security_tests.rs  sqlite_connection_test.rs  sqlite_rusqlite_test.rs  test_config.toml  test_utils.rs
tests/chaos/: random_failure_test.rs
tests/common/: database_test_utils.rs  mod.rs  redis_test_utils.rs
tests/e2e/: macro_test.rs
tests/integration/: batch_write_test.rs  chaos_test.rs  degradation_tests.rs  invalidation_test.rs  lifecycle_test.rs  lock_warmup_test.rs  manual_control_test.rs  metrics_test.rs  partitioning_tests.rs  performance_test.rs  recovery_test.rs  redis_test.rs  sea_orm_sqlite_tests.rs  security_test.rs  single_flight_test.rs  sqlite_partition_tests.rs  two_level_test.rs  version_test.rs
tests/real_env/: docker-compose.cluster.yml  docker-compose.sentinel.yml
tests/real_env/configs/: redis-cluster-node1.conf  redis-master.conf  redis-slave1.conf
tests/unit/: serialization_test.rs
