[workspace]
members = [".", "macros"]

[package]
name = "oxcache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster-async", "sentinel", "connection-manager"] }
rusqlite = { version = "0.38", features = ["bundled"] }
dashmap = "6.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
toml = "0.8"
secrecy = { version = "0.10.3", features = ["serde"] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"
opentelemetry-otlp = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mcp-sdk-rs = "0.3.4"
sea-orm = { version = "1.0.14", default-features = false, features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
jemalloc-ctl = { version = "0.5", optional = true }
murmur3 = "0.5"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
rand = "0.8"
criterion = { version = "0.5", features = ["async_tokio"] }
ctor = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.14.0"

[features]
# 内存分析特性，用于内存泄漏测试
memory-profiling = ["jemalloc-ctl"]
macros = []

[[bench]]
name = "cache_benchmark"
harness = false

[[test]]
name = "invalidation_test"
path = "tests/integration/invalidation_test.rs"

[[test]]
name = "single_flight_test"
path = "tests/integration/single_flight_test.rs"

[[test]]
name = "wal_test"
path = "tests/integration/wal_test.rs"

[[test]]
name = "redis_test"
path = "tests/integration/redis_test.rs"

[[test]]
name = "manual_control_test"
path = "tests/integration/manual_control_test.rs"

[[test]]
name = "layer_test"
path = "tests/layer_test.rs"

[[test]]
name = "lifecycle_test"
path = "tests/integration/lifecycle_test.rs"

# [[test]]
# name = "macro_test"
# path = "tests/e2e/macro_test.rs"

[[test]]
name = "security_test"
path = "tests/integration/security_test.rs"

[[test]]
name = "version_test"
path = "tests/integration/version_test.rs"

[[test]]
name = "chaos_test"
path = "tests/integration/chaos_test.rs"



[[test]]
name = "lock_warmup_test"
path = "tests/integration/lock_warmup_test.rs"

[[test]]
name = "database_partitioning_tests"
path = "tests/database_partitioning_tests.rs"

[[test]]
name = "sea_orm_sqlite_tests"
path = "tests/integration/sea_orm_sqlite_tests.rs"

[[test]]
name = "sqlite_partition_tests"
path = "tests/integration/sqlite_partition_tests.rs"

[[test]]
name = "degradation_tests"
path = "tests/integration/degradation_tests.rs"

